--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -6,3 +6,6 @@ body{
     background-attachment: fixed;
 	background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
 }
+.header{
+	font-weight: bold;	
+}
