--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -1,5 +1,5 @@
 table{
-	margin-top: 8%;
+	margin-top: 2%;
 }
 body{
 	background-repeat: no-repeat;
@@ -8,4 +8,7 @@ body{
 }
 .header{
 	font-weight: bold;	
+}
+h1{
+	margin-top: 55pt;
 }
